# memthol

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Readme.md  build.rs  index.html  readme.md  todo.md
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: base.rs  buttons.rs  chart.rs  common.rs  err.rs  filter.rs  footer.rs  model.rs  msg.rs  point.rs
client/src/chart/: axis.rs
client/src/style/: mod.rs
css/: styles.css
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/alloc_data/: all.html  enum.AllocKind.html  index.html  macro.bail.html  macro.prelude.html  sidebar-items.js  struct.Alloc.html  struct.BigUint.html  struct.Builder.html  struct.CLoc.html  struct.Diff.html  struct.Init.html  struct.Loc.html  type.Span.html
doc/base/: all.html  enum.Either.html  enum.RangeCmp.html  fn.convert.html  fn.destroy.html  fn.identity.html  index.html  macro.cfg_item!.html  macro.cfg_item.html  macro.client_wasm_build_dir!.html  macro.client_wasm_build_dir.html  macro.client_wasm_build_dir_for!.html  macro.client_wasm_build_dir_for.html  macro.debug_do!.html  macro.debug_do.html  macro.implement.html  macro.new_time_stats.html  macro.prelude!.html  macro.prelude.html  macro.time.html  macro.unwrap_or.html  sidebar-items.js  struct.Range.html  struct.SampleRate.html  type.SVec16.html  type.SVec32.html  type.SVec64.html  type.SVec8.html
doc/charts/: all.html  index.html  sidebar-items.js  struct.Charts.html  trait.ChartExt.html
doc/ctf/: all.html  constant.VERSION.html  fn.parse.html  index.html  macro.parse.html  macro.prelude.html  sidebar-items.js  trait.EventAction.html
doc/manage/: all.html  constant.DIRS.html  constant.LICENSE.html  constant.LICENSE_PREF.html  enum.ErrorKind.html  enum.HasLicense.html  fn.check.html  fn.main.html  fn.work.html  fn.work_on_dir.html  index.html  sidebar-items.js  struct.Error.html  struct.Rewriter.html  trait.ResultExt.html  type.Res.html
doc/memthol/: all.html  index.html  sidebar-items.js  struct.ErrorHandler.html
docs/: compatibility.md  compile_stats.md  string_like_filters.md
libs/alloc_data/: Cargo.toml
libs/alloc_data/src/: fmt.rs  lib.rs  locs.rs  mem.rs  parser.rs  prelude.rs  test.rs  time.rs
libs/alloc_data/src/mem/: labels.rs  str.rs  trace.rs
libs/alloc_data/src/parser/: ctf.rs  memthol.rs
libs/base/: Cargo.toml
libs/base/src/: err.rs  lib.rs  macros.rs  prelude.rs  stopwatch.rs  time.rs  time_stats.rs  uid.rs
libs/base/src/time/: duration.rs  lifetime.rs  since_start.rs
libs/charts/: Cargo.toml
libs/charts/src/: base.rs  chart.rs  color.rs  common.rs  data.rs  err.rs  filter.rs  index.rs  lib.rs  msg.rs  point.rs  prelude.rs  uid.rs
libs/charts/src/chart/: axis.rs  mod.rs  settings.rs  spec.rs  time.rs
libs/charts/src/chart/time/: mod.rs  size.rs
libs/charts/src/data/: mod.rs  watcher.rs
libs/charts/src/filter/: gen.rs  label.rs  loc.rs  mod.rs  ord.rs  spec.rs  stats.rs  string_like.rs  sub.rs
libs/charts/src/time/: mod.rs  size.rs
libs/client/: Cargo.toml
libs/client/src/: base.rs  buttons.rs  chart.rs  common.rs  cst.rs  err.rs  filter.rs  footer.rs  js.rs  layout.rs  lib.rs  macros.rs  main.rs  model.rs  msg.rs  nu_data.rs  point.rs  prelude.rs  settings.rs  style.rs  tmp.rs  top_tabs.rs  uid.rs
libs/client/src/chart/: axis.rs  boxed_chart.rs  control.rs  mod.rs  new.rs  time.rs  window.rs
libs/client/src/chart/nu_time/: mod.rs  value.rs
libs/client/src/chart/time/: mod.rs  value.rs
libs/client/src/data/: filter.rs  mod.rs
libs/client/src/filter/: label.rs  mod.rs  ord.rs
libs/client/src/footer/: filter.rs  mod.rs
libs/client/src/js/: amcharts.rs
libs/client/src/layout/: button.rs  chart.rs  foot.rs  footer.rs  header.rs  input.rs  progress.rs  table.rs  tabs.rs
libs/client/src/nu_chart/: mod.rs
libs/client/src/style/: class.rs  id.rs
libs/client/static/: index.html
libs/client/static/css/: _buttons.sass  _colors.sass  _fonts.sass  _layout.sass  _menu.sass  _mixins.sass  base.css.map  body.css  body.css.map  body.sass  client.css  client.css.map  client.sass  fg_bg_setup.css.map  footer.css  footer.css.map  footer.sass  header.css  header.css.map  header.sass  layout.css.map  style.css  style.css.map  style.sass
libs/client/static/js/: charts.js  core.js
libs/ctf/: Cargo.toml
libs/ctf/examples/: parse.rs
libs/ctf/src/: ast.rs  btrace.rs  lib.rs  loc.rs  macros.rs  parse.rs  prelude.rs  test.rs
libs/data/: Cargo.toml
libs/data/src/: err.rs  labels.rs  lib.rs  locs.rs  mem.rs  parser.rs  test.rs  time.rs
memthol/: Cargo.toml  build.rs
memthol/src/: assets.rs  conf.rs  err.rs  lib.rs  main.rs  msg.rs  prelude.rs  router.rs  socket.rs
mini_tutorial/: 404.html  basics.html  callstack_filters.html  charts.html  global_settings.html  index.html  intro.html  print.html  searchindex.js  searchindex.json
rsc/ackermann_with_sets/: 0000000000080.memthol.diff  0000000000100.memthol.diff  0000000000140.memthol.diff  0000000000160.memthol.diff  0000000000180.memthol.diff  0000000000200.memthol.diff  0000000000260.memthol.diff  0000000000300.memthol.diff  0000000000320.memthol.diff  0000000000340.memthol.diff  0000000000380.memthol.diff  0000000000400.memthol.diff  0000000000440.memthol.diff  0000000000480.memthol.diff  0000000000500.memthol.diff  0000000000520.memthol.diff  0000000000560.memthol.diff  0000000000580.memthol.diff  0000000000600.memthol.diff  0000000000640.memthol.diff  0000000000660.memthol.diff  0000000000680.memthol.diff  0000000000700.memthol.diff  0000000000760.memthol.diff  0000000000940.memthol.diff  0000000001000.memthol.diff  0000000001020.memthol.diff  0000000001080.memthol.diff  0000000001100.memthol.diff  0000000001160.memthol.diff  0000000001180.memthol.diff  (+16 more)
rsc/manage/: Cargo.toml  license_header
rsc/manage/src/: main.rs
rsc/memtrace_example/: .gitignore  Makefile  dune  dune-project  min_memtrace.opam  min_memtrace_lib.opam  readme.md
rsc/memtrace_example/src/min_memtrace_lib/: .merlin  dune  main.ml
src/: base.rs  err.rs  lib.rs  main.rs  nu_socket.rs  router.rs  socket.rs
(+2891 files in other folders)
