[package]
name = "client"
version = "0.1.0"
authors = ["AdrienChampion <adrien.champion@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc_data = { path = "../libs/alloc_data" }
base = { path = "../libs/base" }
charts = { path = "../libs/charts" }

chrono = "*"
error-chain = "*"
lazy_static = "*"
log = "*"
regex = "*"
safe_index = "*"
serde = "*"
stdweb = "*"
stdweb-derive = "*"
strum = "*"
strum_macros = "*"
typed-html = { version = "*", features = ["stdweb"] }
web_logger = "*"
yew = { version = "*", features = ["std_web"] }