[package]
name = "memthol"
version = "0.1.0"
authors = ["Adrien Champion <adrien.champion@ocamlpro.com"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc_data = { path = "../libs/alloc_data" }
base = { path = "../libs/base" }
charts = { path = "../libs/charts" }

gotham = "*"
error-chain = "*"
lazy_static = "*"
websocket = "*"
clap = "*"

[build-dependencies]
base = { path = "../libs/base" }
fs_extra = "*"
lazy_static = "*"
walkdir = "*"
