[package]
name = "memthol"
version = "0.2.0"
authors = ["Adrien Champion <adrien.champion@ocamlpro.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../libs/base" }
charts = { path = "../libs/charts", features = ["server"] }

gotham = "*"
error-chain = "*"
lazy_static = "*"
tungstenite = "*"
clap = "*"

[build-dependencies]
base = { path = "../libs/base" }
fs_extra = "*"
lazy_static = "*"
walkdir = "*"

[features]
default = []
profiling = [
    "base/profiling",
    "charts/profiling",
]
