[package]
name = "alloc_data"
version = "0.1.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]
edition = "2018"

[dependencies]
base = { path = "../base" }
ctf = { path = "../ctf" }

num-bigint = { version = "*", features = ["serde"] }
num-traits = "*"
peg = "*"
rayon = "*"
serde = "*"
serde_derive = "*"
toml = "*"