[package]
name = "alloc_data"
version = "0.2.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]
edition = "2018"

[dependencies]
base = { path = "../base" }

num-bigint = { version = "*", features = ["serde"] }
num-traits = "*"
peg = "*"
rayon = "*"
serde = "*"
serde_derive = "*"
toml = "*"

[features]
server = [ "base/server" ]
client = [ "base/client" ]
default = []