[package]
name = "base"
version = "0.1.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*", features = ["serde", "wasmbind"] }
either = "*"
error-chain = "*"
derive_more = "*"
lazy_static = "*"
peg = "*"
rand = { version = "*", features = ["small_rng"] }
smallvec = "*"