[package]
name = "base"
version = "0.2.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*", features = ["serde"] }
either = "*"
error-chain = "*"
derive_more = "*"
lazy_static = "*"
log = "^0.4"
peg = "*"
rand = { version = "^0.7.3", features = ["small_rng"] }
smallvec = "*"

[features]
client = [ "chrono/wasmbind" ]
server = []
default = [ "server" ]
time_stats = []