[package]
name = "base"
version = "1.0.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "*"
chrono = { version = "*", features = ["serde"] }
conv = "*"
either = "*"
error-chain = "*"
derive_more = "*"
lazy_static = "*"
log = "^0.4"
peg = "*"
rand = { version = "^0.7.3", features = ["small_rng"] }
safe_index = "*"
serde = "*"
serde_derive = "*"
smallvec = "*"

[features]
client = [ "chrono/wasmbind" ]
server = []
default = [ "server" ]
time_stats = []