[package]
name = "charts"
version = "0.1.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
alloc_data = { path = "../alloc_data" }

anyhow = "*"
number_prefix = "*"
palette = "*"
plotters = "*"
plotters-backend = "*"
regex = "*"
safe_index = "*"
serde = "*"
serde_json = "*"
serde_regex = "*"
strum = "*"
strum_macros = "*"
yew = "*"