[package]
name = "charts"
version = "0.2.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
alloc_data = { path = "../alloc_data" }
ctf = { path = "../ctf", optional = true }

anyhow = "*"
number_prefix = "*"
palette = "*"
plotters = "*"
plotters-backend = "*"
regex = "*"
safe_index = "*"
serde = "*"
serde_json = "*"
serde_regex = "*"
strum = "*"
strum_macros = "*"
yew = "*"

[features]
server = [ "ctf", "alloc_data/server", "base/server" ]
client = [ "alloc_data/client", "base/client" ]
default = []
profiling = [
    "alloc_data/profiling",
    "base/profiling",
    "ctf/profiling",
]