[package]
name = "client"
version = "0.2.0"
authors = ["AdrienChampion <adrien.champion@email.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc_data = { path = "../alloc_data", features = ["client"] }
base = { path = "../base", features = ["client"] }
charts = { path = "../charts", features = ["client"] }

chrono = "*"
error-chain = "*"
lazy_static = "*"
log = "^0.4"
plotters-canvas = "*"
safe_index = "*"
serde = "*"
serde_derive = "*"
strum = "*"
strum_macros = "*"
typed-html = { git = "https://github.com/bodil/typed-html" }
wasm-logger = "*"
wasm-bindgen = "*"
web-sys = { version = "*", features = [
    "Element", "NamedNodeMap", "Attr",
    "HtmlCanvasElement", "HtmlSelectElement", "HtmlCollection"
] }
wee_alloc = "*"
yew = "*"
yew-components = "*"