[package]
name = "client"
version = "0.2.0"
authors = ["AdrienChampion <adrien.champion@email.com>"]
edition = "2018"
description = "client part of the memthol profiling visualizer"
repository = "N/A"
license = "N/A"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base", default_features = false, features = ["client"] }
charts = { path = "../charts", default_features = false, features = ["client"] }

chrono = "*"
error-chain = "*"
lazy_static = "*"
plotters-canvas = "*"
safe_index = "*"
serde = "*"
serde_derive = "*"
strum = "*"
strum_macros = "*"
typed-html = { git = "https://github.com/bodil/typed-html" }
wasm-logger = "*"
wasm-bindgen = "*"
web-sys = { version = "*", features = [
    "Element", "NamedNodeMap", "Attr",
    "HtmlCanvasElement", "HtmlSelectElement", "HtmlCollection"
] }
wee_alloc = "*"
yew = "*"
yew-components = "*"

[features]
default = []
time_stats = [
    "base/time_stats",
]