[package]
name = "alloc_data"
version = "0.1.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]
edition = "2018"

[dependencies]
num-bigint = { version = "*", features = ["serde"] }
num-traits = "*"
lazy_static = "*"
rand = "*"
serde = "*"
serde_derive = "*"
stdweb = "*"
chrono = { version = "*", features = ["serde"] }
