[package]
name = "manage"
version = "0.1.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
pretty_env_logger = "^0.4"
walkdir = "^2"
error-chain = "*"